--- a/shop123/Views/Admin/SpuCreate.cshtml
+++ b/shop123/Views/Admin/SpuCreate.cshtml
@@ -139,6 +139,6 @@
     @Html.ActionLink("Back to List", "Spu")
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
