--- a/shop123/Views/Home/Detail.cshtml
+++ b/shop123/Views/Home/Detail.cshtml
@@ -10,56 +10,56 @@
     <div class="container_48" id="wrap">
         <div id="content" class="container_48">
             <div id="exhibit" class="container_48">
-                <div id="sidenav" class="grid_9 alpha">
-                    <ul class="sale">
-                        <li>
-                            <h3>上衣類</h3>
-                            <ul class="sale_category">
-                                <li><a href="">聯名印花長T</a></li>
-                                <li><a href="">聯名印花短T</a></li>
-                                <li><a href="">厚棉系列</a></li>
-                                <li><a href="">Fleece系列</a></li>
-                                <li><a href="">長袖上衣</a></li>
-                                <li><a href="">條紋系列</a></li>
-                                <li><a href="">polo系列</a></li>
-                                <li><a href="">立領/高領</a></li>
-                                <li><a href="">針織衫/毛衣</a></li>
-                                <li><a href="">厚磅系列</a></li>
-                                <li><a href="">短袖上衣</a></li>
-                                <li><a href="">快乾系列</a></li>
-                                <li><a href="">輕涼系列</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <h3>襯衫類</h3>
-                            <ul class="sale_category">
-                                <li><a href="">商務襯衫</a></li>
-                                <li><a href="">法蘭絨襯衫</a></li>
-                                <li><a href="">休閒襯衫</a></li>
-                                <li><a href="">Fleece系列</a></li>
-                                <li><a href="">牛津襯衫</a></li>
-                                <li><a href="">格紋襯衫</a></li>
-                                <li><a href="">棉麻襯衫</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <h3>下身類</h3>
-                            <ul class="sale_category">
-                                <li><a href="">保暖褲</a></li>
-                                <li><a href="">卡其/休閒長褲</a></li>
-                                <li><a href="">牛仔褲</a></li>
-                                <li><a href="">短/七分褲</a></li>
-                                <li><a href="">九分/束口褲</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+                @*<div id="sidenav" class="grid_9 alpha">
+                        <ul class="sale">
+                            <li>
+                                <h3>上衣類</h3>
+                                <ul class="sale_category">
+                                    <li><a href="">聯名印花長T</a></li>
+                                    <li><a href="">聯名印花短T</a></li>
+                                    <li><a href="">厚棉系列</a></li>
+                                    <li><a href="">Fleece系列</a></li>
+                                    <li><a href="">長袖上衣</a></li>
+                                    <li><a href="">條紋系列</a></li>
+                                    <li><a href="">polo系列</a></li>
+                                    <li><a href="">立領/高領</a></li>
+                                    <li><a href="">針織衫/毛衣</a></li>
+                                    <li><a href="">厚磅系列</a></li>
+                                    <li><a href="">短袖上衣</a></li>
+                                    <li><a href="">快乾系列</a></li>
+                                    <li><a href="">輕涼系列</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h3>襯衫類</h3>
+                                <ul class="sale_category">
+                                    <li><a href="">商務襯衫</a></li>
+                                    <li><a href="">法蘭絨襯衫</a></li>
+                                    <li><a href="">休閒襯衫</a></li>
+                                    <li><a href="">Fleece系列</a></li>
+                                    <li><a href="">牛津襯衫</a></li>
+                                    <li><a href="">格紋襯衫</a></li>
+                                    <li><a href="">棉麻襯衫</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h3>下身類</h3>
+                                <ul class="sale_category">
+                                    <li><a href="">保暖褲</a></li>
+                                    <li><a href="">卡其/休閒長褲</a></li>
+                                    <li><a href="">牛仔褲</a></li>
+                                    <li><a href="">短/七分褲</a></li>
+                                    <li><a href="">九分/束口褲</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>*@
                 <div class="grid_38 alpha omega">
                     <div class="product_info grid_39">
                         <div class="product_image">
                             <img id="productImg" style="max-width: 300px; cursor: pointer;"
-                                 onload="$.product.ChangeImgPadding();" src="@Model.Spu.spuImg1" alt="極暖羽絨外套-男"
-                                 title="極暖羽絨外套-男">
+                                 onload="$.product.ChangeImgPadding();" src="@Model.Spu.spuImg1" alt="@Model.Spu.spuName"
+                                 title="Model.Spu.spuName">
                         </div>
                         <div class="clearfloat">
                             <div class="product_title">
@@ -78,30 +78,18 @@
                             </div>
                             <div class="color">
                                 <div class="clear"></div>
-                                <a onclick="ChangeImage(this);return false;" return false;" href="">
-                                    <img src="/images/5449401_48.jpg" alt="復古黃" title="復古黃"
-                                         onmouseover="$.product.GetProductImg('0', '01')"
-                                         onmouseout="$('div.color img[select=true]').trigger('mouseover');$.product.GetCurrentSize();"
-                                         style=" padding: 3px;">
-                                </a>
-                                <a onclick="ChangeImage(this);return false;" href="">
-                                    <img src="/images/5449402_48.jpg" alt="藍色" title="藍色"
-                                         onmouseover="$.product.GetProductImg('0', '01')"
-                                         onmouseout="$('div.color img[select=true]').trigger('mouseover');$.product.GetCurrentSize();"
-                                         style=" padding: 3px;">
-                                </a>
-                                <a onclick="ChangeImage(this);return false;" href="">
-                                    <img src="/images/5449404_48.jpg" alt="黑色" title="黑色"
-                                         onmouseover="$.product.GetProductImg('0', '01')"
-                                         onmouseout="$('div.color img[select=true]').trigger('mouseover');$.product.GetCurrentSize();"
-                                         style=" padding: 3px;">
-                                </a>
-                                <a onclick="ChangeImage(this);return false;" href="">
-                                    <img src="/images/5449405_48.jpg" alt="深灰" title="深灰"
-                                         onmouseover="$.product.GetProductImg('0', '01')"
-                                         onmouseout="$('div.color img[select=true]').trigger('mouseover');$.product.GetCurrentSize();"
-                                         style=" padding: 3px;">
-                                </a>
+                                @foreach (var item in Model.Sku)
+                                {
+                                    <a onclick="ChangeImage(this);return false;" return false;" href="">
+                                        <img src="@item.skuImg" alt="@item.skuColor" title="復古黃"
+                                             onmouseover="$.product.GetProductImg('0', '01')"
+                                             onmouseout="$('div.color img[select=true]').trigger('mouseover');$.product.GetCurrentSize();"
+                                             style=" padding: 3px;">
+                                    </a>
+
+                                }
+
+                               
                             </div>
                             <div class="size">
                                 <span id="sizelist" class="picksize" cuurentsn>
@@ -165,18 +153,7 @@
                                 </div>
                                 <div class="prod-disc">
                                     <span>
-                                        商品編號:3Z6025047
-                                        #EDWIN
-                                        #搖滾不死系列
-                                        #連帽外套
-
-                                        【購物須知】
-                                        1.同一筆訂單限配送同一個地址，若需配送不同地址請分別下單訂購。
-                                        2.確認訂單及款項後1-2個工作天內安排出貨(不含國定及例假日)，商品配送以物流公司實際送達時間為準，無法指定配送日期及時間。
-                                        宅配通貨件追蹤查詢 http://query2.e-can.com.tw/ECAN_APP/search.shtm
-                                        3.若訂單商品有無法出貨等特殊情況，EDWIN將主動聯繫通知。
-                                        4.單筆訂單結帳金額滿1500元享免運優惠，訂單未達免運門檻將酌收運費(超商取貨60元/宅配收貨100元)，不提供離島及海外配送服務。
-                                        5.如對訂單或商品有任何問題，可先至聊聊留言，我們將儘快回覆處理。
+                                        @Model.Spu.spuInfo
                                     </span>
                                 </div>
                             </div>
