--- a/shop123/Views/Home/categoryPage.cshtml
+++ b/shop123/Views/Home/categoryPage.cshtml
@@ -29,16 +29,18 @@
             foreach (var item in Model)
             {
 
-                <div class="card-deck col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="card card ">
-                        <img src="@item.spuImg1" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">@item.spuName</h5>
+                <div class="card col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3" style="border:0px">
+                    <div class="card pb-3">
+                        <a class="text-dark text-decoration-none" href="@Url.Action("Detail")?id=@item.id"> <img src="@item.spuImg1" class="card-img-top" alt="..."></a>
+                        <div class="pl-3">
+                            <a class="text-dark text-decoration-none" href="@Url.Action("Detail")?id=@item.id"><p class="card-title">@item.spuName</p></a>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between" style="height: 45px; background-color: white;border-top:0px">
                             <p class="card-text">@item.spuPrice</p>
-                            <div class=" d-flex justify-content-between">
-                                <button class="btn shadow-none" style="outline:0;"><i class="far fa-heart"></i></button>
-                                <button class="btn shadow-none" style="outline:0;"><i class="fas fa-cart-plus"></i></button>
-                            </div>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between" style="height:45px;background-color:white;border-top:0px">
+                            <button class="btn shadow-none" style="outline:0;"><i class="far fa-heart"></i></button>
+                            <button class="btn shadow-none" style="outline:0;"><i class="fas fa-cart-plus"></i></button>
                         </div>
                     </div>
                 </div>
