footer跑上去修改完成

--- a/shop123/Views/Home/Detail.cshtml
+++ b/shop123/Views/Home/Detail.cshtml
@@ -206,6 +206,7 @@
                     </div>
                     <!-- end of comments -->
                 </div>
+                <div class="clear"></div>
             </div>
         </div>
     </div>
